fix dataview bug and missing overflows

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .content {
+  overflow: hidden;
   flex: 1;
   display: flex;
   margin: 16px 32px;
