--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   background: #f7f7f7;
+  overflow: hidden;
 }
 
 #root {
